Fixes fluid layout issue on items/show.
 * Removes column classes, since we want those to span the full width of their
   container anyways.
 * Reduces .row min-width to account for smaller screen sizes.

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -159,3 +159,7 @@ p {
     margin-top:0 !important;
   }
 }
+
+.row {
+  min-width: 20px !important;
+}
